# ksh

./: Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml  codeql.yaml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: constants.rs  lib.rs  logging.rs
crates/cli/src/builder/: args.rs  client.rs  mod.rs  newtypes.rs
crates/cli/src/commands/: run.rs
crates/ksh/: Cargo.toml
crates/ksh/src/: lib.rs  profile.rs
crates/ksh/src/k8s/: client.rs  mod.rs  node.rs  pod.rs  pvc.rs
src/: lib.rs  main.rs
src/cli/: cli.rs  logging.rs  mod.rs
src/cli/builder/: args.rs  client.rs  newtypes.rs
src/cli/commands/: run.rs
src/k8s/: client.rs  mod.rs  node.rs  pod.rs  pv.rs  pvc.rs
