[package]
name = "ksh"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = { version = "1.0.102" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
kube = { version = "3.1.0", features = ["client", "ws"] }
tokio = { version = "1.50.0", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.17" }
