[package]
name = "ksh"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ksh"
path = "src/bin/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.0", features = ["color", "env", "error-context", "std", "string"], default-features = false }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = { version = "6.0.0" }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
hyper-util = { version = "0.1.20" }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
kube = { version = "3.1.0", features = ["client", "rustls-tls", "ws"] }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.228" }
tokio = { version = "1.51.1", features = ["io-std", "macros", "rt-multi-thread"] }
tower = { version = "0.5.3" }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.22" }
