[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
name = "ksh"
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "=1.0.102" }
clap = { version = "=4.6.1", features = ["color", "env", "error-context", "help", "std", "string"], default-features = false }
crossterm = { version = "=0.29.0", features = ["event-stream"] }
dirs = { version = "=6.0.0" }
futures = { version = "=0.3.17", default-features = false, features = ["async-await"] }
hyper-util = { version = "=0.1.20" }
k8s-openapi = { version = "=0.27.1", features = ["v1_35"] }
kube = { version = "=3.1.0", features = ["client", "rustls-tls", "ws"] }
scopeguard = { version = "=1.2.0" }
serde = { version = "=1.0.228" }
serde_json = { version = "=1.0.149" }
tokio = { version = "=1.52.1", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "=0.7.18" }
tower = { version = "=0.5.3" }
tracing = { version = "=0.1.44" }
tracing-subscriber = { version = "=0.3.23" }

[patch.crates-io]
# Responding to security advisory: https://rustsec.org/advisories/RUSTSEC-2026-0097.html
# Dependencies pull in version with vulnerability.
rand = { git = "https://github.com/rust-random/rand.git", tag = "0.9.4"}
